--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 
-Jennifer Huang <133@holbertonschool.com>
-Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
+Mathys Waelter <5005@holbertonstudent.com>
